services section & change images + fixed z-index values.

--- a/style.scss
+++ b/style.scss
@@ -12,11 +12,6 @@
 	scroll-behavior: smooth;
 }
 
-.main-container {
-	max-width: 1440px;
-	margin: 0 auto;
-}
-
 html {
 	overflow-x: hidden;
 }
@@ -26,7 +21,11 @@ body {
 	place-content: center;
 }
 
-header,
+.main-container {
+	max-width: 1440px;
+	margin: 0 auto;
+}
+
 section {
 	padding: 0 1rem;
 }
@@ -62,18 +61,21 @@ header {
 		top: 0;
 		left: 50%;
 		transform: translateX(-50%);
-		max-width: 1440px;
+		max-width: 100%;
 		width: 100%;
-		padding: 40px 1rem;
+		padding: 40px 10% 25px 10%;
 		display: flex;
 		gap: 40px;
 		justify-content: space-between;
 		align-items: center;
-		transition: all 0.3s ease;
+		transition: all 0.4s ease-in-out;
+		z-index: 999999;
+		border-bottom: 1px solid $white-color;
+		background-color: #ffffff11;
 
 		&.scrolled {
 			background-color: $text-dark;
-			border-bottom: 2px solid $stroke-color;
+			border-bottom: 2px solid $white-color;
 		}
 
 		.logo img {
@@ -123,7 +125,7 @@ header {
 			opacity: 0;
 			visibility: hidden;
 			transition: all 0.5s ease-in-out;
-			z-index: 1;
+			z-index: 99999;
 
 			ul {
 				display: flex;
@@ -354,12 +356,9 @@ header {
 	}
 }
 
-main {
-	position: relative;
-}
 // Banner Styles
 main .banner-header {
-	padding: 40px 0;
+	padding: 40px 1rem;
 	width: 100%;
 	background-color: $accent-color;
 
@@ -383,20 +382,34 @@ main .banner-header {
 	}
 }
 
-main .scrollup {
-	padding: 15px;
-	background-color: $text-dark;
-	border: 1px solid $stroke-color;
-	position: fixed;
-	right: 50px;
-	bottom: 50px;
-	color: $white-color;
-	cursor: pointer;
+main .subtitle {
+	display: flex;
+	align-items: center;
+	gap: 20px;
+	margin-bottom: 20px;
+	color: $text-dark;
 	transition: all 0.3s ease;
 
 	&:hover {
-		transform: scale(0.9);
-		border: 1px solid $accent-color;
+		color: $accent-color;
+
+		img {
+			animation-play-state: paused;
+		}
+	}
+
+	img {
+		width: 50px;
+		animation: rotate 3s linear infinite;
+	}
+
+	@keyframes rotate {
+		from {
+			transform: rotate(0deg);
+		}
+		to {
+			transform: rotate(360deg);
+		}
 	}
 }
 
@@ -449,37 +462,6 @@ main .about-section {
 		.about-right {
 			flex: 1;
 
-			.subtitle {
-				display: flex;
-				align-items: center;
-				gap: 20px;
-				margin-bottom: 20px;
-				color: $text-dark;
-				transition: all 0.3s ease;
-
-				&:hover {
-					color: $accent-color;
-
-					img {
-						animation-play-state: paused;
-					}
-				}
-
-				img {
-					width: 50px;
-					animation: rotate 3s linear infinite;
-				}
-			}
-
-			@keyframes rotate {
-				from {
-					transform: rotate(0deg);
-				}
-				to {
-					transform: rotate(360deg);
-				}
-			}
-
 			.title {
 				display: flex;
 				flex-direction: column;
@@ -498,6 +480,94 @@ main .about-section {
 					width: 100%;
 				}
 			}
+		}
+	}
+}
+
+// Services Section
+.services-section {
+	.subtitle {
+		justify-content: center;
+	}
+
+	.title {
+		text-align: center;
+	}
+
+	.service-cards {
+		z-index: -1;
+		display: flex;
+		margin: 50px 0 100px 0;
+		gap: 20px;
+
+		.card {
+			min-width: 350px;
+			flex: 1;
+			position: relative;
+			padding: 50px;
+			display: flex;
+			flex-direction: column;
+			justify-content: end;
+			gap: 10px;
+			border-radius: 12px;
+			height: 65vh;
+			color: $white-color;
+			box-shadow: 0 4px 20px rgba(0, 0, 0, 0.55);
+			transition: all 0.3s ease;
+
+			&:hover {
+				transform: translateY(-10px);
+				box-shadow: 0 14px 30px rgba(0, 0, 0, 0.65);
+			}
+
+			h5 {
+				color: $accent-color;
+			}
+			p {
+				font-size: 16px;
+				font-weight: 200;
+				margin-bottom: 10px;
+			}
+
+			span {
+				padding: 10px;
+				width: max-content;
+				font-size: 22px;
+				font-weight: 400;
+				font-family: $font-family-second;
+				cursor: pointer;
+				text-decoration: underline;
+				border: 1px solid transparent;
+				transition: all 0.3s ease;
+
+				&:hover {
+					background-color: $text-dark;
+					color: $accent-color;
+					border: 1px solid $stroke-color;
+					box-shadow: 0 2px 10px rgba(0, 0, 0, 0.65);
+					border-radius: 12px;
+				}
+			}
+		}
+
+		.card1 {
+			background-image: url(assets/images/service-1.png);
+			background-position: center;
+			background-size: cover;
+			background-repeat: no-repeat;
+		}
+
+		.card2 {
+			background-image: url(assets/images/service-2.png);
+			background-position: center;
+			background-size: cover;
+			background-repeat: no-repeat;
+		}
+		.card3 {
+			background-image: url(assets/images/service-3.png);
+			background-position: center;
+			background-size: cover;
+			background-repeat: no-repeat;
 		}
 	}
 }
@@ -523,7 +593,7 @@ main .about-section {
 	}
 }
 
-@media (max-width: 1120px) {
+@media (max-width: 1210px) {
 	.menu {
 		display: none;
 	}
@@ -544,7 +614,7 @@ main .about-section {
 			text-align: center;
 
 			.car {
-				width: 50%;
+				width: 85%;
 			}
 
 			.trusted-card {
@@ -564,7 +634,7 @@ main .about-section {
 				text-align: center;
 
 				img {
-					width: 50%;
+					width: 85%;
 				}
 			}
 		}
@@ -578,6 +648,9 @@ main .about-section {
 		.card {
 			flex-direction: column;
 		}
+	}
+	.services-section .service-cards {
+		flex-wrap: wrap;
 	}
 }
 
